styles/base.css
/*=============================Color Schema=======================*/

:root {
    --main-color: #813A8D;
    --color-background: #F3F3F3;
    --text-principal: #2E2E2E;
    --color-accent: #C8A2C8;
    --text-light: #ffffff;
    --border-color: #808080;
}

/*=================================Site Wide=========================*/

* {
    font-family: "Ubuntu", sans-serif;
    box-sizing: border-box;
    color: var(--text-principal);
}

body {
    background-color: var(--color-background);
}

/*=================================Header=========================*/

.principal-header {
    display: grid;
    grid-template-columns: 24px auto 44px;
    padding: 1rem 0 1.5rem 2rem;
    align-items: end;
    border-bottom: solid 1px var(--border-color);
    column-gap: 8px;
}

header img {
    display: block;
    width: 100%;
    height: auto;
}

header span {
    font-size: 1.2rem;
}

/*=================================Hamburguer=========================*/

.hamburguer {
    background: none;
    border: none;
    cursor: pointer;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 2rem;
}

.hamburguer::before {
    content: "\2630";
}

.hamburguer.show::before {
    content: "\00D7";
}


/*=================================Navigation=========================*/

.navigation {
    display: none;
    border-bottom: solid 1px var(--border-color);
    color: var(--text-light);
}

.navigation.show {
    display: block;
}

.navigation ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    color: var(--text-light);
}

.navigation a {
    display: block;
    padding: .5rem;
    text-decoration: none;
}

.navigation a:hover {
    background-color: var(--color-accent);
}

h1 {
    margin-left: 10px;
}

/*=================================main=========================*/
.about-student,
#certificates {
    margin: .5rem .5rem .5rem .5rem;
}

.about-me {
    background-color: var(--color-accent);
    display: grid;
    grid-template-columns: 1fr;
}

.about-me p {
    padding: .5rem;
}

.header-section {
    background-color: var(--main-color);
    border-bottom: solid 1px var(--border-color);
    text-align: center;
}

.about-me h2 {
    font-size: 1rem;
    color: var(--text-light);
}

.photo-about-me img {
    width: 100%;
    height: auto;
    max-width: 250px;
    border-radius: 10px;
}

/*==========================Certificates section=========================*/

.btn-filter {
    display: flex;
    flex-direction: column;
    gap: .5rem;
    justify-content: space-between;
}

#certificates button {
    padding: .5rem;
    margin: .5rem .5rem 0 .5rem;
    min-width: 220px;
    background-color: #636363;
    color: var(--text-light);
    border-radius: 5px;
    cursor: pointer;
    transition:
        background-color 0.25s ease,
        transform 0.15s ease,
        box-shadow 0.15s ease;
}

#courses {
    list-style: none;
    padding: 0;
    margin: .5rem;
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: .3rem;
}

.course {
    border: solid 1px var(--border-color);
    background-color: var(--color-background);
    cursor: pointer;
    transition: background-color .3s ease, transform .2s ease;
    padding: .8rem;
    min-width: 220px;
}

.course.completed:hover {
    background-color: #90e2a3;
}

.course.incomplete {
    background-color: #f6b26b;
}

/*=================================Footer=========================*/

footer {
    border-top: solid 1px #ddd;
    padding: 1rem 10px;
    text-align: center;
}

.logos-media {
    display: flex;
    justify-content: center;
    column-gap: 8px;
}

.logos-media a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 44px;
    height: 44px;
    border: #ccc solid 1px;
    border-radius: 22px;
}

.logos-media img {
    width: 22px;
    height: 22px;
}

.logos-media a:hover {
    background-color: #ddd;
}

